--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "author": "Titus Wormer <tituswormer@gmail.com>",
   "devDependencies": {
-    "eslint": "^0.9.0",
+    "eslint": "^0.10.0",
     "istanbul": "^0.3.0",
     "jscs": "^1.0.0",
     "matcha": "^0.6.0",
     "mocha": "^2.0.0",
-    "parse-english": "^0.4.0-rc.2"
+    "parse-english": "^0.4.0"
   },
   "scripts": {
     "test": "node_modules/.bin/_mocha --reporter spec --check-leaks -u exports test.js",
