Move `build-emoji.js` to `build-data.js`

--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,7 @@
     "component.json",
     "package.json",
     "benchmark.js",
-    "build-emoji.js",
+    "build-data.js",
     "test.js"
   ]
 }
