--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- test.js",
     "lint": "npm run lint-api && npm run lint-test && npm run lint-benchmark && npm run lint-script && npm run lint-style",
     "lint-api": "node_modules/.bin/eslint index.js --rule 'consistent-return: false'",
-    "lint-script": "node_modules/.bin/eslint build-emoji.js",
+    "lint-script": "node_modules/.bin/eslint build-data.js",
     "lint-test": "node_modules/.bin/eslint test.js --env mocha",
     "lint-benchmark": "node_modules/.bin/eslint benchmark.js --global suite,set,bench",
     "lint-style": "node_modules/.bin/jscs index.js test.js benchmark.js --reporter=inline",
     "make": "npm run lint && npm run coverage",
     "benchmark": "node_modules/.bin/matcha benchmark.js",
-    "build": "node build-emoji.js",
+    "build": "node build-data.js",
     "prepublish": "npm run build"
   }
 }
