--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,12 @@
 {
   "name": "nlcst-emoji-modifier",
-  "main": "index.js",
+  "main": "nlcst-emoji-modifier.js",
   "description": "Emoji in NLCST",
   "license": "MIT",
   "keywords": [
     "nlcst",
     "emoji"
   ],
-  "dependencies": {
-    "gemoji": "^0.2.0",
-    "nlcst-to-string": "^0.1.0"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/wooorm/nlcst-emoji-modifier.git"
@@ -25,11 +21,14 @@
     "build/",
     "components/",
     "coverage/",
+    "data/",
     "node_modules/",
+    "script/",
+    "test/",
+    "build.js",
+    "example.js",
+    "index.js",
     "component.json",
-    "package.json",
-    "benchmark.js",
-    "build-data.js",
-    "test.js"
+    "package.json"
   ]
 }
