--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
     "mdast-slug": "^1.0.0",
     "mdast-validate-links": "^1.0.0",
     "mocha": "^2.0.0",
-    "parse-english": "^1.0.0",
-    "retext": "^1.0.0-rc.3",
-    "unist-util-visit": "^1.0.0"
+    "parse-english": "^2.0.0",
+    "retext": "^1.0.0-rc.4"
   },
   "scripts": {
     "test-api": "mocha --check-leaks test/index.js",
