Refactor code-style

--- a/package.json
+++ b/package.json
@@ -19,12 +19,9 @@
   ],
   "devDependencies": {
     "browserify": "^11.0.0",
-    "eslint": "^1.0.0",
     "esmangle": "^1.0.0",
     "gemoji": "^1.0.0",
     "istanbul": "^0.3.0",
-    "jscs": "^2.0.0",
-    "jscs-jsdoc": "^1.0.0",
     "mdast": "^1.0.0",
     "mdast-comment-config": "^1.0.0",
     "mdast-github": "^1.0.0",
@@ -33,21 +30,30 @@
     "mdast-validate-links": "^1.0.0",
     "mocha": "^2.0.0",
     "parse-english": "^2.0.0",
-    "retext": "^1.0.0-rc.4"
+    "retext": "^1.0.0-rc.4",
+    "xo": "^0.17.1"
   },
   "scripts": {
     "test-api": "mocha --check-leaks test/index.js",
     "test-coverage": "istanbul cover _mocha -- test/index.js",
     "test-travis": "npm run test-coverage",
     "test": "npm run test-api",
-    "lint-api": "eslint .",
-    "lint-style": "jscs --reporter inline .",
-    "lint": "npm run lint-api && npm run lint-style",
+    "lint": "xo",
     "make": "npm run lint && npm run test-coverage",
     "bundle": "browserify index.js --no-builtins -s nlcstEmojiModifier > nlcst-emoji-modifier.js",
     "postbundle": "esmangle nlcst-emoji-modifier.js > nlcst-emoji-modifier.min.js",
     "build-data": "node script/build-data.js",
     "build-md": "mdast . --quiet",
     "build": "npm run build-data && npm run bundle && npm run build-md"
+  },
+  "xo": {
+    "space": true,
+    "rules": {
+      "complexity": "off",
+      "guard-for-in": "off"
+    },
+    "ignore": [
+      "nlcst-emoji-modifier.js"
+    ]
   }
 }
