--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,23 @@
 language: node_js
-script: npm run-script test-travis
 node_js:
-- '0.10'
-- '0.11'
-- '0.12'
-- iojs
+- '4.0'
+- '7.0'
+after_script: bash <(curl -s https://codecov.io/bash)
 sudo: false
-after_script: npm install codecov.io && cat ./coverage/lcov.info | codecov
+deploy:
+  - provider: npm
+    email: tituswormer@gmail.com
+    api_key:
+      secure: N9kjXzHlOk0y5AzD3H4rWIBWaJsqZyWAAjyIezHzwIfA3S54BiVQWRQ87VDeytdeq3MNGBn7DZxH3dEy6JiZKPy2AsXo76pEsYknU8dPxV0e6vZn3yT6eojn5p49w29viYCbYwcxinwU/Fugvn98K1W81/B+hhrz5hxK719P6FA=
+    on:
+      tags: true
+      node: '4.0'
+  - provider: releases
+    api_key:
+      secure: DfkFffCbPB92KCWByAcQTcL143u6ftLNlHfvlhJZGIkawhKDfJgzjuzat882Wcpw+xkLIZ685GWTGUcVQ2UBYjY9KnCkdkwNBkPGlrTPR82zmsyg+1hvPIfURop4d0xiwtkDaQLnBKQBEPYvcQ73fisYzOiZSrMIx/fSr0UqvcQ=
+    file:
+      - "nlcst-emoji-modifier.js"
+      - "nlcst-emoji-modifier.min.js"
+    on:
+      tags: true
+      node: '7.0'
