Replace mocha with tape

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browserify": "^11.0.0",
     "esmangle": "^1.0.0",
     "gemoji": "^1.0.0",
+    "is-hidden": "^1.1.0",
     "istanbul": "^0.3.0",
     "mdast": "^1.0.0",
     "mdast-comment-config": "^1.0.0",
@@ -28,14 +29,17 @@
     "mdast-lint": "^1.0.0",
     "mdast-slug": "^1.0.0",
     "mdast-validate-links": "^1.0.0",
-    "mocha": "^2.0.0",
+    "negate": "^1.0.0",
+    "nlcst-to-string": "^1.1.0",
     "parse-english": "^2.0.0",
     "retext": "^1.0.0-rc.4",
+    "tape": "^4.6.2",
+    "unist-util-remove-position": "^1.1.0",
     "xo": "^0.17.1"
   },
   "scripts": {
-    "test-api": "mocha --check-leaks test/index.js",
-    "test-coverage": "istanbul cover _mocha -- test/index.js",
+    "test-api": "node test",
+    "test-coverage": "istanbul cover tape test/index.js",
     "test-travis": "npm run test-coverage",
     "test": "npm run test-api",
     "lint": "xo",
