--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "nlcst-to-string": "^2.0.0",
     "unist-util-modify-children": "^1.0.0"
   },
-  "repository": "wooorm/nlcst-emoji-modifier",
-  "author": "Titus Wormer <tituswormer@gmail.com>",
+  "repository": "https://github.com/syntax-tree/nlcst-emoji-modifier",
+  "bugs": "https://github.com/syntax-tree/nlcst-emoji-modifier/issues",
+  "author": "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
+  "contributors": [
+    "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)"
+  ],
   "files": [
     "data/emoji.json",
     "index.js"
