--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "index.js"
   ],
   "devDependencies": {
-    "browserify": "^13.0.0",
+    "browserify": "^14.0.0",
     "esmangle": "^1.0.0",
     "is-hidden": "^1.1.0",
     "negate": "^1.0.0",
-    "nyc": "^10.0.0",
-    "parse-english": "^3.0.0",
-    "remark-cli": "^2.1.0",
-    "remark-preset-wooorm": "^1.0.0",
+    "nyc": "^11.2.0",
+    "parse-english": "^4.1.0",
+    "remark-cli": "^4.0.0",
+    "remark-preset-wooorm": "^3.0.0",
     "tape": "^4.6.2",
     "unist-util-remove-position": "^1.1.0",
-    "xo": "^0.17.1"
+    "xo": "^0.18.2"
   },
   "scripts": {
     "build-md": "remark . --quiet --frail --output",
@@ -54,6 +54,7 @@
   },
   "xo": {
     "space": true,
+    "esnext": false,
     "rules": {
       "complexity": "off",
       "guard-for-in": "off"
@@ -63,6 +64,8 @@
     ]
   },
   "remarkConfig": {
-    "presets": "wooorm"
+    "plugins": [
+      "preset-wooorm"
+    ]
   }
 }
