--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "bugs": "https://github.com/syntax-tree/nlcst-emoji-modifier/issues",
   "author": "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
   "contributors": [
-    "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)"
+    "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
+    "Hugo Dozois <hugo.dozois@gmail.com>"
   ],
   "files": [
     "data/emoji.json",
