--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ after_script: bash <(curl -s https://codecov.io/bash)
 sudo: false
 deploy:
   - provider: npm
+    skip_cleanup: true
     email: tituswormer@gmail.com
     api_key:
       secure: N9kjXzHlOk0y5AzD3H4rWIBWaJsqZyWAAjyIezHzwIfA3S54BiVQWRQ87VDeytdeq3MNGBn7DZxH3dEy6JiZKPy2AsXo76pEsYknU8dPxV0e6vZn3yT6eojn5p49w29viYCbYwcxinwU/Fugvn98K1W81/B+hhrz5hxK719P6FA=
