--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "unist-util-modify-children": "^1.0.0"
   },
   "devDependencies": {
-    "browserify": "^14.0.0",
+    "browserify": "^16.0.0",
     "esmangle": "^1.0.0",
     "is-hidden": "^1.1.0",
     "negate": "^1.0.0",
     "nyc": "^11.2.0",
     "parse-english": "^4.1.0",
-    "remark-cli": "^4.0.0",
-    "remark-preset-wooorm": "^3.0.0",
+    "remark-cli": "^5.0.0",
+    "remark-preset-wooorm": "^4.0.0",
     "tape": "^4.6.2",
     "unist-util-remove-position": "^1.1.0",
-    "xo": "^0.18.2"
+    "xo": "^0.20.0"
   },
   "scripts": {
     "build-md": "remark . --quiet --frail --output",
@@ -56,8 +56,11 @@
     "space": true,
     "esnext": false,
     "rules": {
-      "complexity": "off",
-      "guard-for-in": "off"
+      "guard-for-in": "off",
+      "no-var": "off",
+      "prefer-arrow-callback": "off",
+      "object-shorthand": "off",
+      "complexity": "off"
     },
     "ignore": [
       "nlcst-emoji-modifier.js"
