--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "negate": "^1.0.0",
     "nyc": "^11.2.0",
     "parse-english": "^4.1.0",
+    "prettier": "^1.12.1",
     "remark-cli": "^5.0.0",
     "remark-preset-wooorm": "^4.0.0",
     "tape": "^4.6.2",
@@ -37,14 +38,13 @@
     "xo": "^0.20.0"
   },
   "scripts": {
-    "build-md": "remark . --quiet --frail --output",
+    "format": "remark . -qfo && prettier --write '**/*.js' && xo --fix",
     "build-bundle": "browserify index.js --bare -s nlcstEmojiModifier > nlcst-emoji-modifier.js",
     "build-mangle": "esmangle < nlcst-emoji-modifier.js > nlcst-emoji-modifier.min.js",
-    "build": "npm run build-md && npm run build-bundle && npm run build-mangle",
-    "lint": "xo",
+    "build": "npm run build-bundle && npm run build-mangle",
     "test-api": "node test",
     "test-coverage": "nyc --reporter lcov tape test/index.js",
-    "test": "npm run build && npm run lint && npm run test-coverage"
+    "test": "npm run format && npm run build && npm run test-coverage"
   },
   "nyc": {
     "check-coverage": true,
@@ -52,8 +52,16 @@
     "functions": 100,
     "branches": 100
   },
+  "prettier": {
+    "tabWidth": 2,
+    "useTabs": false,
+    "singleQuote": true,
+    "bracketSpacing": false,
+    "semi": false,
+    "trailingComma": "none"
+  },
   "xo": {
-    "space": true,
+    "prettier": true,
     "esnext": false,
     "rules": {
       "guard-for-in": "off",
