--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   ],
   "repository": "syntax-tree/nlcst-emoji-modifier",
   "bugs": "https://github.com/syntax-tree/nlcst-emoji-modifier/issues",
-  "author": "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
+  "author": "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
   "contributors": [
-    "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
+    "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
     "Hugo Dozois <hugo.dozois@gmail.com>"
   ],
   "files": [
