--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "xo": "^0.20.0"
   },
   "scripts": {
-    "format": "remark . -qfo && prettier --write '**/*.js' && xo --fix",
+    "format": "remark . -qfo && prettier --write \"**/*.js\" && xo --fix",
     "build-bundle": "browserify index.js --bare -s nlcstEmojiModifier > nlcst-emoji-modifier.js",
     "build-mangle": "esmangle < nlcst-emoji-modifier.js > nlcst-emoji-modifier.min.js",
     "build": "npm run build-bundle && npm run build-mangle",
