--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: node_js
 node_js:
-- lts/boron
-- node
+  - lts/dubnium
+  - node
 after_script: bash <(curl -s https://codecov.io/bash)
 sudo: false
 deploy:
   provider: releases
   skip_cleanup: true
   api_key:
-    secure: DfkFffCbPB92KCWByAcQTcL143u6ftLNlHfvlhJZGIkawhKDfJgzjuzat882Wcpw+xkLIZ685GWTGUcVQ2UBYjY9KnCkdkwNBkPGlrTPR82zmsyg+1hvPIfURop4d0xiwtkDaQLnBKQBEPYvcQ73fisYzOiZSrMIx/fSr0UqvcQ=
+    secure: IVupBRoAqymbBjA+yNjflcUHYLsHjKBO35QolW48mqsSThMrqWr4bYQUaKkWL1ptLzz5OOc2fGuk/cPG+coMMHJc5tXuaw5gtOgEokcNb+khCyxyd/xdDWNHbfDPHlEqdtb0ypVjm8WfNGvuzJBrlUVfgm9ZEtmVTIyWaQn6duk=
   file:
-    - "nlcst-emoji-modifier.js"
-    - "nlcst-emoji-modifier.min.js"
+    - 'nlcst-emoji-modifier.js'
+    - 'nlcst-emoji-modifier.min.js'
   on:
     tags: true
