--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "index.js"
   ],
   "dependencies": {
-    "gemoji": "^4.2.0",
+    "emoji-regex": "^8.0.0",
+    "gemoji": "^4.0.0",
     "nlcst-to-string": "^2.0.0",
-    "unist-util-modify-children": "^1.0.0"
+    "unist-util-generated": "^1.0.0",
+    "unist-util-position": "^3.0.0",
+    "unist-util-visit": "^1.0.0"
   },
   "devDependencies": {
     "browserify": "^16.0.0",
@@ -34,6 +37,7 @@
     "remark-cli": "^6.0.0",
     "remark-preset-wooorm": "^5.0.0",
     "tape": "^4.0.0",
+    "unist-builder": "^1.0.4",
     "unist-util-remove-position": "^1.0.0",
     "xo": "^0.24.0"
   },
