--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   ],
   "repository": "syntax-tree/nlcst-emoji-modifier",
   "bugs": "https://github.com/syntax-tree/nlcst-emoji-modifier/issues",
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/unified"
+  },
   "author": "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
