--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "nlcst-emoji-modifier",
   "version": "3.0.0",
-  "description": "Emoji in NLCST",
+  "description": "nlcst utility to support emoji",
   "license": "MIT",
   "keywords": [
+    "unist",
     "nlcst",
+    "nlcst-util",
+    "util",
+    "utility",
+    "emoticon",
     "emoji"
   ],
   "repository": "syntax-tree/nlcst-emoji-modifier",
