--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "negate": "^1.0.0",
     "nyc": "^15.0.0",
     "parse-english": "^4.0.0",
-    "prettier": "^1.0.0",
-    "remark-cli": "^7.0.0",
-    "remark-preset-wooorm": "^6.0.0",
-    "tape": "^4.0.0",
+    "prettier": "^2.0.0",
+    "remark-cli": "^8.0.0",
+    "remark-preset-wooorm": "^7.0.0",
+    "tape": "^5.0.0",
     "unist-builder": "^2.0.0",
     "unist-util-remove-position": "^2.0.0",
-    "xo": "^0.26.0"
+    "xo": "^0.32.0"
   },
   "scripts": {
     "format": "remark . -qfo && prettier --write \"**/*.js\" && xo --fix",
@@ -77,6 +77,7 @@
     "prettier": true,
     "esnext": false,
     "rules": {
+      "unicorn/no-fn-reference-in-iterator": "off",
       "guard-for-in": "off",
       "complexity": "off"
     },
