--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
   },
   "devDependencies": {
     "browserify": "^16.0.0",
-    "esmangle": "^1.0.0",
     "is-hidden": "^1.0.0",
     "negate": "^1.0.0",
     "nyc": "^15.0.0",
@@ -46,14 +45,15 @@
     "remark-cli": "^8.0.0",
     "remark-preset-wooorm": "^7.0.0",
     "tape": "^5.0.0",
+    "tinyify": "^2.0.0",
     "unist-builder": "^2.0.0",
     "unist-util-remove-position": "^2.0.0",
     "xo": "^0.32.0"
   },
   "scripts": {
-    "format": "remark . -qfo && prettier --write \"**/*.js\" && xo --fix",
-    "build-bundle": "browserify index.js --bare -s nlcstEmojiModifier > nlcst-emoji-modifier.js",
-    "build-mangle": "esmangle < nlcst-emoji-modifier.js > nlcst-emoji-modifier.min.js",
+    "format": "remark . -qfo && prettier . --write && xo --fix",
+    "build-bundle": "browserify . -s nlcstEmojiModifier > nlcst-emoji-modifier.js",
+    "build-mangle": "browserify . -s nlcstEmojiModifier -p tinyify -o nlcst-emoji-modifier.min.js",
     "build": "npm run build-bundle && npm run build-mangle",
     "test-api": "node test",
     "test-coverage": "nyc --reporter lcov tape test/index.js",
