--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "tinyify": "^3.0.0",
     "unist-builder": "^2.0.0",
     "unist-util-remove-position": "^3.0.0",
-    "xo": "^0.35.0"
+    "xo": "^0.38.0"
   },
   "scripts": {
-    "format": "remark . -qfo && prettier . --write && xo --fix",
+    "format": "remark . -qfo && prettier . --write --loglevel warn && xo --fix",
     "build-bundle": "browserify . -s nlcstEmojiModifier > nlcst-emoji-modifier.js",
     "build-mangle": "browserify . -s nlcstEmojiModifier -p tinyify -o nlcst-emoji-modifier.min.js",
     "build": "npm run build-bundle && npm run build-mangle",
@@ -77,6 +77,7 @@
     "prettier": true,
     "esnext": false,
     "rules": {
+      "unicorn/no-array-for-each": "off",
       "unicorn/no-fn-reference-in-iterator": "off",
       "guard-for-in": "off",
       "complexity": "off"
