--- a/package.json
+++ b/package.json
@@ -23,47 +23,37 @@
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
     "Hugo Dozois <hugo.dozois@gmail.com>"
   ],
+  "sideEffects": false,
+  "type": "module",
+  "main": "index.js",
   "files": [
-    "data/emoji.json",
     "index.js"
   ],
   "dependencies": {
     "emoji-regex": "^9.0.0",
-    "gemoji": "^6.0.0",
-    "nlcst-to-string": "^2.0.0",
-    "unist-util-generated": "^1.0.0",
-    "unist-util-position": "^3.1.0",
-    "unist-util-visit": "^2.0.0"
+    "gemoji": "^7.0.0",
+    "nlcst-to-string": "^3.0.0",
+    "unist-util-generated": "^2.0.0",
+    "unist-util-position": "^4.0.0",
+    "unist-util-visit": "^3.0.0"
   },
   "devDependencies": {
-    "browserify": "^17.0.0",
-    "is-hidden": "^1.0.0",
-    "negate": "^1.0.0",
-    "nyc": "^15.0.0",
-    "parse-english": "^4.0.0",
+    "c8": "^7.0.0",
+    "is-hidden": "^2.0.0",
+    "parse-english": "^5.0.0",
     "prettier": "^2.0.0",
     "remark-cli": "^9.0.0",
     "remark-preset-wooorm": "^8.0.0",
     "tape": "^5.0.0",
-    "tinyify": "^3.0.0",
-    "unist-builder": "^2.0.0",
-    "unist-util-remove-position": "^3.0.0",
+    "unist-builder": "^3.0.0",
+    "unist-util-remove-position": "^4.0.0",
     "xo": "^0.38.0"
   },
   "scripts": {
     "format": "remark . -qfo && prettier . --write --loglevel warn && xo --fix",
-    "build-bundle": "browserify . -s nlcstEmojiModifier > nlcst-emoji-modifier.js",
-    "build-mangle": "browserify . -s nlcstEmojiModifier -p tinyify -o nlcst-emoji-modifier.min.js",
-    "build": "npm run build-bundle && npm run build-mangle",
-    "test-api": "node test",
-    "test-coverage": "nyc --reporter lcov tape test/index.js",
-    "test": "npm run format && npm run build && npm run test-coverage"
-  },
-  "nyc": {
-    "check-coverage": true,
-    "lines": 100,
-    "functions": 100,
-    "branches": 100
+    "test-api": "node test/index.js",
+    "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node test/index.js",
+    "test": "npm run format && npm run test-coverage"
   },
   "prettier": {
     "tabWidth": 2,
@@ -75,16 +65,11 @@
   },
   "xo": {
     "prettier": true,
-    "esnext": false,
     "rules": {
       "unicorn/no-array-for-each": "off",
-      "unicorn/no-fn-reference-in-iterator": "off",
-      "guard-for-in": "off",
-      "complexity": "off"
-    },
-    "ignore": [
-      "nlcst-emoji-modifier.js"
-    ]
+      "no-var": "off",
+      "prefer-arrow-callback": "off"
+    }
   },
   "remarkConfig": {
     "plugins": [
