--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "main": "index.js",
   "types": "index.d.ts",
   "files": [
+    "complex-types.d.ts",
     "index.d.ts",
     "index.js"
   ],
   "dependencies": {
+    "@types/nlcst": "^1.0.0",
     "emoji-regex": "^9.0.0",
     "gemoji": "^7.0.0",
     "nlcst-to-string": "^3.0.0",
@@ -57,7 +59,7 @@
   },
   "scripts": {
     "prepack": "npm run build && npm run format",
-    "build": "rimraf \"{test/**,}*.d.ts\" && tsc && type-coverage",
+    "build": "rimraf \"test/**/*.d.ts\" \"index.d.ts\" && tsc && type-coverage",
     "format": "remark . -qfo && prettier . --write --loglevel warn && xo --fix",
     "test-api": "node test/index.js",
     "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node test/index.js",
