--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "@types/nlcst": "^1.0.0",
     "emoji-regex": "^10.0.0",
-    "gemoji": "^7.0.0",
+    "gemoji": "^8.0.0",
     "nlcst-to-string": "^3.0.0",
     "unist-util-generated": "^2.0.0",
     "unist-util-position": "^4.0.0",
@@ -87,7 +87,7 @@
   },
   "remarkConfig": {
     "plugins": [
-      "preset-wooorm"
+      "remark-preset-wooorm"
     ]
   },
   "typeCoverage": {
