--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "nlcst-to-string": "^4.0.0",
     "unist-util-generated": "^3.0.0",
     "unist-util-position": "^5.0.0",
-    "unist-util-visit": "^5.0.0"
+    "unist-util-visit-parents": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
