--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
   ],
   "dependencies": {
     "@types/nlcst": "^2.0.0",
+    "devlop": "^1.0.0",
     "emoji-regex": "^10.0.0",
     "gemoji": "^8.0.0",
     "nlcst-emoticon-modifier": "^3.0.0",
     "nlcst-to-string": "^4.0.0",
     "unist-util-generated": "^3.0.0",
-    "unist-util-position": "^5.0.0",
-    "unist-util-visit-parents": "^6.0.0"
+    "unist-util-position": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
